<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_interest_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.InterestEdit">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="425dp"
            android:id="@+id/INTEREST_EDIT_GUIDELINE"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="38dp"
            app:layout_constraintGuide_percent="0.10705596" />

        <TextView
            android:text="Título"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/INTEREST_EDIT_TEXT_TITLE"
            app:layout_constraintLeft_toLeftOf="@+id/INTEREST_EDIT_GUIDELINE"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/INTEREST_EDIT_HEADER" />

        <TextView
            android:text="Descrição"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/INTEREST_EDIT_TEXT_DESCRIPTION"
            app:layout_constraintLeft_toLeftOf="@+id/INTEREST_EDIT_GUIDELINE"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/INTEREST_EDIT_TITLE" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/placeh"
            android:ems="10"
            android:id="@+id/INTEREST_EDIT_TITLE"
            android:layout_width="300dp"
            style="@style/Widget.AppCompat.EditText"
            app:layout_constraintLeft_toLeftOf="@+id/INTEREST_EDIT_GUIDELINE"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/INTEREST_EDIT_TEXT_TITLE" />

        <EditText
            android:layout_height="100dp"
            android:inputType="textPersonName"
            android:text="@string/placeh"
            android:ems="10"
            android:id="@+id/INTEREST_EDIT_DESCRIPTION"
            android:layout_width="300dp"
            app:layout_constraintLeft_toLeftOf="@+id/INTEREST_EDIT_GUIDELINE"
            app:layout_constraintTop_toBottomOf="@+id/INTEREST_EDIT_TEXT_DESCRIPTION"
            android:layout_marginTop="8dp" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/INTEREST_EDIT_BUTTON_CANCEL"
            android:layout_marginStart="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@+id/INTEREST_EDIT_DESCRIPTION"
            android:layout_marginTop="40dp" />

        <Button
            android:text="@string/conclude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/INTEREST_EDIT_BUTTON_OK"
            android:layout_marginEnd="40dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="40dp"
            app:layout_constraintTop_toBottomOf="@+id/INTEREST_EDIT_DESCRIPTION"
            android:layout_marginTop="40dp" />

        <TextView
            android:text="Editor de Interesse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/INTEREST_EDIT_HEADER"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.57" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
